--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
           <div class="container">   
             <div class="well">
               <h2><b>About me</b></h2>
+              <center>
+                <img src="images/mypic.jpg" style="width:200px;height:200px;">
+              </center>
               <p style="line-height: 1.8;">I'm currently a student at the University of Massachusetts Amherst. I am studying Computer Science and 
                  Computational Mathematics. Outside of class I'm a member of the University of Massachusetts Minuteman Marching Band and I play the trumpet. I have been playing
                  the trumpet for about a decade and I am trying to learn how to play the guitar. I'm also part of the bands
