--- a/index.html
+++ b/index.html
@@ -52,13 +52,14 @@
             <div class="well">
               <h2><b>About me</b></h2>
               <center>
-                <img src="images/mypic.jpg" style="width:300px;height:300px;">
+                <img src="images/mypic.jpg" style="width:500px;height:500px;">
               </center>
+              <br>
               <p style="line-height: 1.8;">I'm currently a student at the University of Massachusetts Amherst. I am studying Computer Science and 
                  Computational Mathematics. Outside of class I'm a member of the University of Massachusetts Minuteman Marching Band and I play the trumpet. I have been playing
                  the trumpet for about a decade and I am trying to learn how to play the guitar. I'm also part of the bands
                  Administrative staff, I help manage the bands website which you can check out <a href="http://www.umass.edu/band/">
-                  here</a>. Feel free to click on the image in the top right corner to check out my linkedin page</p>
+                  here</a>. Feel free to click on the image in the top right corner to check out my facebook page</p>
             </div>
             <div class="well">
               <h2><b>About this site</b></h2>
