--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="well">
               <h2><b>About me</b></h2>
               <center>
-                <img src="images/mypic.jpg" style="width:500px;height:500px;">
+                <img src="images/trumpetpic.jpg" style="width:500px;height:500px;">
               </center>
               <br>
               <p style="line-height: 1.8;">I'm currently a student at the University of Massachusetts Amherst. I am studying Computer Science and 
