--- a/index.html
+++ b/index.html
@@ -1,15 +1,5 @@
 <html lang="en">
     <title>Something Clever</title>
-
-    <!--      <h1 class = "sections">Interest</h1>
-          <hr>
-          <p class = "body"> If you haven't figure out by now i'm kind of a nerd. I love watching TV some of my favorite
-          shows are Star Trek, Walking Dead, Game of Thrones, Doctor Who, just to name a few. I have seen almost every
-          science fiction movie made in the last 30 years. Other than TV and movies i love playing video games.
-          I play games such as Halo, League of Legends, Star Craft, and Fallout just to name a few. If anyone wants to
-          play some league with me feel free to message me my account name is Halo TrumpetGod. Some of my other interests
-          including building models, playing soccer, and listening to music mostly rap but some pop and rock as well.</p>
-    -->
         <head>
           <meta charset="utf-8">
           <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,7 +18,7 @@
                 <a href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
                     <img src="images/profilepicture.jpg" class="img-rounded" style="width:150px;height:150px; padding:0px;top: 20px; right:30px; position:absolute;">
                 </a>
-              <h1 style="padding-left:30px;"> <b> Hi I'm Matt </b></h1>
+              <h1 style="padding-left:30px;"><font face="verdana"> Hi I'm Matt </font></h1>
             </div>  
              <div class="container"> 
                 <div class="btn-group btn-group-lg">
@@ -52,7 +42,7 @@
             <div class="well">
               <h2><b>About me</b></h2>
               <center>
-                <img src="images/trumpetpic.jpg" style="width:650px;height:500px;">
+                <img src="images/trumpetpic.jpg" style="width:700px;height:500px;">
               </center>
               <br>
               <p style="line-height: 1.8;">I'm currently a student at the University of Massachusetts Amherst. I am studying Computer Science and 
