--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
                     <img src="images/profilepicture.jpg" class="img-rounded" style="width:150px;height:150px; padding:0px;top: 20px; right:30px; position:absolute;">
                 </a>
-              <h1 style="padding-left:30px;"><font face="verdana"> Hi I'm Matt </font></h1>
+              <h1 style="padding-left:30px;font-family: 'Oswald', sans-serif;"> Hi I'm Matt and welcome to my site</h1>
             </div>  
              <div class="container"> 
                 <div class="btn-group btn-group-lg">
@@ -40,11 +40,11 @@
              </div>
           <div class="container">   
             <div class="well">
+              <h2><b>About me</b></h2>
               <center>
                 <img src="images/trumpetpic.jpg" style="width:700px;height:500px;">
               </center>
               <br>
-              <h2><b>About me</b></h2>
               <p style="line-height: 1.8;">I'm currently a student at the University of Massachusetts Amherst. I am studying Computer Science and 
                  Computational Mathematics. Outside of class I'm a member of the University of Massachusetts Minuteman Marching Band and I play the trumpet. I have been playing
                  the trumpet for about a decade and I am trying to learn how to play the guitar. I'm also part of the bands
