--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
                     <img src="images/profilepicture.jpg" class="img-rounded" style="width:150px;height:150px; padding:0px;top: 20px; right:30px; position:absolute;">
                 </a>
-              <h1 style="padding-left:30px;font-family: 'Oswald', sans-serif;"> <b>Hi i'm Matt</b></h1>
+              <h1 style="padding-left:30px;font-family: 'Oswald', sans-serif;"> Hi i'm Matt</h1>
             </div>  
              <div class="container"> 
                 <div class="btn-group btn-group-lg">
