--- a/index.html
+++ b/index.html
@@ -66,16 +66,18 @@
                </p>
             </div>
           </div>
-          <center>
-            <a href="https://www.linkedin.com/in/matthew-lydigsen-20b755b5" target="_blank">
-                <img src="images/linkedinlogo.png" style="width:40px;height:40px;">
-            </a>
-            <a href="https://github.com/mattncc1701" target="_blank">
-                <img src="images/githubicon.png" style="width:55px;height:50px; padding-left:5;">
-            </a>
-            <a href="https://www.imgur.com" target="_blank">
-                <img src="images/imgurlogo.png" style="width:45px;height:40px;padding-left:8;">
-            </a>
-          </center>    
+          <div class="jumbotron" style="background-color:#336699;">
+              <center>
+                <a href="https://www.linkedin.com/in/matthew-lydigsen-20b755b5" target="_blank">
+                    <img src="images/linkedinlogo.png" style="width:40px;height:40px;">
+                </a>
+                <a href="https://github.com/mattncc1701" target="_blank">
+                    <img src="images/githubicon.png" style="width:55px;height:50px; padding-left:5;">
+                </a>
+                <a href="https://www.imgur.com" target="_blank">
+                    <img src="images/imgurlogo.png" style="width:45px;height:40px;padding-left:8;">
+                </a>
+              </center>
+          </div>
         </body>
 </html>
