--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         </head>
         <body>
-            <div class="jumbotron" style="background-color:#ffffff;"><!--99bbff-->
+            <div class="jumbotron" style="background-color:#000000;"><!--99bbff-->
                 <a href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
                     <img src="images/profilepicture.jpg" class="img-rounded" style="width:150px;height:150px; padding:0px;top: 20px; right:30px; position:absolute;">
                 </a>
