--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
                     <img src="images/profilepicture.jpg" class="img-rounded" style="width:150px;height:150px; padding:0px;top: 20px; right:30px; position:absolute;">
                 </a>
-              <h1 style="padding-left:30px;font-family: sans-serif;"> Hi i'm Matt</h1>
+              <h1 style="padding-left:30px;font-family: sans-serif;"> <font size="4"> Hi i'm Matt</font></h1>
             </div>  
              <div class="container"> 
                 <div class="btn-group btn-group-lg">
@@ -45,11 +45,11 @@
                 <img src="images/trumpetpic.jpg" style="width:700px;height:500px;">
               </center>
               <br>
-              <p style="line-height: 1.8;"> <font size="4"> I'm currently a student at the University of Massachusetts Amherst. I am studying Computer Science and 
+              <p style="line-height: 1.8;"> I'm currently a student at the University of Massachusetts Amherst. I am studying Computer Science and 
                  Computational Mathematics. Outside of class I'm a member of the University of Massachusetts Minuteman Marching Band and I play the trumpet. I have been playing
                  the trumpet for about a decade and I am trying to learn how to play the guitar. I'm also part of the bands
                  Administrative staff, I help manage the bands website which you can check out <a href="http://www.umass.edu/band/">
-                  here</a>. Feel free to click on the image in the top right corner to check out my facebook page. </font></p>
+                  here</a>. Feel free to click on the image in the top right corner to check out my facebook page. </p>
             </div>
             <div class="well">
               <h2><b>About this site</b></h2>
