--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         </head>
         <body>
             <div class="jumbotron" style="background-color:#99bbff;"><!--99bbff-->
-                <!--<a href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
+                <a href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
                     <img src="images/profilepicture.jpg" class="img-rounded" style="width:150px;height:150px; padding:0px;top: 20px; right:30px; position:absolute;">
-                </a>-->
+                </a>
               <h1 style="padding-left:30px;"> Hi i'm Matt</h1>
             </div>  
              <div class="container"> 
