--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="well">
               <h2><b>About me</b></h2>
               <center>
-                <img src="images/trumpetpic.jpg" style="width:700px;height:500px;">
+                <img src="images/trumpetpic.jpg" class="img-responsive" width="700" height="500">
               </center>
               <br>
               <p style="line-height: 1.8;"> I'm currently a student at the University of Massachusetts Amherst. I am studying Computer Science and 
