--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <body>
             <div class="jumbotron" style="background-color:#99bbff;"><!--99bbff-->
                 <a href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
-                    <img src="images/profilepicture.jpg" class="img-rounded" style="width:150px;height:150px; padding:0px;top: 20px; right:30px; position:absolute;">
+                    <img src="images/profilepicture.jpg" class="img-rounded,img-responsive" width="150" height = "150" style="padding:0px;top: 20px; right:30px; position:absolute;">
                 </a>
               <h1 style="padding-left:30px;"> Hi i'm Matt</h1>
             </div>  
