--- a/Interests.html
+++ b/Interests.html
@@ -72,6 +72,20 @@
                don't enjoy it). </p>
             </div>
           </div>
+          
+          <div class="jumbotron" style="background-color:#336699;">
+              <center>
+                <a href="https://www.linkedin.com/in/matthew-lydigsen-20b755b5" target="_blank">
+                    <img src="images/linkedinlogo.png" style="width:50px;height:50px;">
+                </a>
+                <a href="https://github.com/mattncc1701" target="_blank">
+                    <img src="images/githubicon.png" style="width:65px;height:60px; padding-left:5;">
+                </a>
+                <a href="https://www.imgur.com" target="_blank">
+                    <img src="images/imgurlogo.png" style="width:55px;height:50px;padding-left:8;">
+                </a>
+              </center>
+          </div>
               
         </body>
 </html>
