--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             </div>
           </div>
         </body>
+        <footer>
          <div class="navbar navbar-fixed-bottom" style="background-color:#336699;">
               <center>
                 <a href="https://www.linkedin.com/in/matthew-lydigsen-20b755b5" target="_blank">
@@ -80,4 +81,5 @@
                 </a>
               </center>
           </div>
+        </footer>  
 </html>
