--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </div>
         </body>
         <footer>
-         <div class="navbar navbar-fixed-bottom" style="background-color:#336699;">
+         <div class="footer" style="background-color:#336699;">
               <center>
                 <a href="https://www.linkedin.com/in/matthew-lydigsen-20b755b5" target="_blank">
                     <img src="images/linkedinlogo.png" style="width:50px;height:50px;">
