--- a/Projects.html
+++ b/Projects.html
@@ -45,7 +45,10 @@
             </div>
           </div>
               
-          <div class="jumbotron" style="background-color:#336699;">
+        </body>
+        
+        <footer>
+         <div class="footer" style="background-color:#336699;">
               <center>
                 <a href="https://www.linkedin.com/in/matthew-lydigsen-20b755b5" target="_blank">
                     <img src="images/linkedinlogo.png" style="width:50px;height:50px;">
@@ -57,6 +60,6 @@
                     <img src="images/imgurlogo.png" style="width:55px;height:50px;padding-left:8;">
                 </a>
               </center>
-          </div>      
-        </body>
+          </div>
+        </footer>  
 </html>
