--- a/Current_Work.html
+++ b/Current_Work.html
@@ -1,1 +1,50 @@
+<html lang="en">
+    <title>Something Clever</title>
+        <head>
+          <meta charset="utf-8">
+          <meta http-equiv="X-UA-Compatible" content="IE=edge">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
 
+          <!-- Bootstrap -->
+          <link href="css/bootstrap.min.css" rel="stylesheet">
+          <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+          <!-- Include all compiled plugins (below), or include individual files as needed -->
+          <script src="js/bootstrap.min.js"></script>
+
+        </head>
+        <body>
+            <div class="jumbotron" style="background-color:#99bbff;">
+              <h1 style="padding-left:30px;">Projects</h1>
+            </div>  
+             <div class="container"> 
+               <div class="btn-group btn-group-lg">
+                    <a href="index.html" class="btn btn-primary" role="button">Home</a>
+                    <div class="btn-group btn-group-lg">
+                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                      Programming Knowledge <span class="caret"></span></button>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="java.html">Java</a></li>
+                        <li><a href="C.html">C++/C</a></li>
+                        <li><a href="Python.html">Python</a></li>
+                        <li><a href="javascript.html">Javascript</a></li>
+                      </ul>
+                     </div> 
+                    <a href="Interests.html" class="btn btn-primary" role="button">Interests</a>
+                    <a href="Current_Work.html" class="btn btn-primary" role="button">Current Work</a>
+                  </div>
+             </div>
+          <div class="container">   
+            <div class="well">
+              <h2><b>About me</b></h2>
+               <p></p>
+            </div>
+            <div class="well">
+              <h2><b>FIRST Robotics</b></h2>
+               <p></p>
+            </div>
+          </div>
+              
+        </body>
+        
+</html>
