--- a/Current_Work.html
+++ b/Current_Work.html
@@ -31,7 +31,7 @@
                       </ul>
                      </div> 
                     <a href="Interests.html" class="btn btn-primary" role="button">Interests</a>
-                    <a href="Current_Work.html" class="btn btn-primary" role="button">Current Work</a>
+                    <a href="Projects.html" class="btn btn-primary" role="button">Projects</a>
                   </div>
              </div>
           <div class="container">   
