--- a/Current_Work.html
+++ b/Current_Work.html
@@ -15,7 +15,7 @@
         </head>
         <body>
             <div class="jumbotron" style="background-color:#99bbff;">
-              <h1 style="padding-left:30px;">Projects</h1>
+              <h1 style="padding-left:30px;">Current Work</h1>
             </div>  
              <div class="container"> 
                <div class="btn-group btn-group-lg">
