--- a/index.html
+++ b/index.html
@@ -15,10 +15,17 @@
         </head>
         <body>
             <div class="jumbotron" style="background-color:#99bbff;"><!--99bbff-->
-                <a href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
-                    <img src="images/profilepicture.jpg" class="img-rounded,img-responsive" width="150" height = "150" style="padding:0px;top: 20px; right:30px; position:absolute;">
-                </a>
-              <h1 style="padding-left:30px;"> Hi i'm Matt</h1>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <h1 style="padding-left:30px;"> Hi I'm Matt</h1>
+                    </div>
+                    <div class="col-sm-6"></div>
+                    <div class="col-sm-6">
+                        <a href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
+                            <img src="images/profilepicture.jpg" class="img-rounded,img-responsive" width="150" height = "150" style="padding:0px;top: 20px; right:30px;">
+                        </a>
+                    </div>
+                </div>
             </div>  
            <!--  <div class="container"> 
               
