--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
         <body>
             <div class="jumbotron" style="background-color:#99bbff;"><!--99bbff-->
                 <div class="row">
-                    <div class="col-sm-4">
+                    <div class="col-sm-10">
                         <h1 style="padding-left:30px;"> Hi I'm Matt</h1>
                     </div>
-                    <div class="col-sm-6"></div>
                     <div class="col-sm-2">
                         <a href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
-                            <img src="images/profilepicture.jpg" class="img-rounded,img-responsive" width="150" height = "150" style="padding:0px;top: 20px; right:30px;">
+                            <img src="images/profilepicture.jpg" class="img-rounded,img-responsive" width="175" height = "175" style="padding:0px;">
                         </a>
                     </div>
                 </div>
