--- a/Projects.html
+++ b/Projects.html
@@ -37,7 +37,7 @@
           <div class="container">   
             <div class="well">
               <h2><b>Downtime Capture System</b></h2>
-               <p>This was a Downtime Capture System, using a Raspberry pi, I created to measure when a factory machine stopped 
+               <p style="line-height: 1.8;">This was a Downtime Capture System, using a Raspberry pi, I created to measure when a factory machine stopped 
                functioning. It would index the time that the machine went down by receiving a signal from the machine. 
                Then a worker could use a GUI i created to record the reasons why the the machine went down. The reasons it could 
                go down could be updated at any time from an excel spread sheet. Then once the event had been logged it would send
@@ -45,22 +45,22 @@
             </div>
             <div class="well">
               <h2><b>Mosaic Creator</b></h2>
-               <p>Using java, I created a function that makes image mosaics from a large number of smaller images. 
+               <p style="line-height: 1.8;">Using java, I created a function that makes image mosaics from a large number of smaller images. 
                A product of the code can be seen in my profile picture. In the link provided, the code can also create blurring 
                effects, sharpening effects, and contrast changes.</p>
             </div>
             <div class="well">
               <h2><b>Space Invaders Game</b></h2>
-               <p>Using java, I recreated the old arcade game space invaders.</p>
+               <p style="line-height: 1.8;">Using java, I recreated the old arcade game space invaders.</p>
             </div>
             <div class="well">
               <h2><b>Plannit</b></h2>
-               <p>This is a website me and group created for my web programming class. I was the tea leader of a group of six people. 
+               <p style="line-height: 1.8;">This is a website me and group created for my web programming class. I was the tea leader of a group of six people. 
                It is a customization planner app that is built using the mean stack which consists of Mongodb, Express, Angular, and Nodejs. </p>
             </div>
             <div class="well">
               <h2><b>3D Carnival Game</b></h2>
-               <p>Using OpenGL in Java, I created a 3D Carnival Games system consisting of three games Duck Shooter, Balloon popper, and water gun shooter.</p>
+               <p style="line-height: 1.8;">Using OpenGL in Java, I created a 3D Carnival Games system consisting of three games Duck Shooter, Balloon popper, and water gun shooter.</p>
             </div>
           </div>
               
