--- a/Interests.html
+++ b/Interests.html
@@ -43,7 +43,7 @@
                 frameborder="0" allowfullscreen ></iframe>
               </center>
               <br>
-               <p>This video is of my FRC team back in 2013 at the Boston State Regional Finals. Our team
+               <p style="line-height: 1.8;">This video is of my FRC team back in 2013 at the Boston State Regional Finals. Our team
                 one the regional that year as well as the Chairman's award. Since sophomore year of high school i have been
                 heavily involved in FIRST. FIRST allows high school students working along with adult mentors to build 120 
                  pound robots to accomplish challenges FIRST presents every year. The challenge in the video above is
@@ -54,20 +54,20 @@
             </div>
             <div class="well">
               <h2><b>Music</b></h2>
-               <p> I have been playing the trumpet for over a decade and have been involved in many musical groups. I went to Clinton High
+               <p style="line-height: 1.8;"> I have been playing the trumpet for over a decade and have been involved in many musical groups. I went to Clinton High
                School and was part of the Clinton High School band for four years. During that time I also took trumpet lessons
                with Mark Bacon in order to expand my musical education. My senior year of high school I earned a chair in the
                Central Districts Music Festival. It took me all four years of my high school career to be selected for that
                festival and although I made it by the skin of my teeth in last chair I was still proud to have made it at all.</p>
                <br>
-               <p>In college I joined the University of Massachusetts Minuteman Marching Band (UMMB). It is a lot of work. We
+               <p style="line-height: 1.8;">In college I joined the University of Massachusetts Minuteman Marching Band (UMMB). It is a lot of work. We
                have practice monday-friday from 440-610 during the fall semester and most of our weekends are gone. We start when
                the temperature is at its highest and end the year when the temperature is at its lowest. But I still love
                the band and I have had some amazing perormances which include performing at Gillette Stadium, Penn State, Allentown,
                and my freshman year the Macy's Thanksgiving Day parade. Aside from the band I am also part of the Hoop Band
                at Umass. We are a pep band that plays at Basketball games and recently at the Hockey Games.</p>
                <br>
-               <p>Aside from playing music I enjoy listening to all sorts of types of music from rap, rock, pop, rnb, and dubstep.
+               <p style="line-height: 1.8;">Aside from playing music I enjoy listening to all sorts of types of music from rap, rock, pop, rnb, and dubstep.
                To be honest the only type of music I don't listen to is country (sorry to everyone who loves country I just
                don't enjoy it). </p>
             </div>
