--- a/Interests.html
+++ b/Interests.html
@@ -71,6 +71,18 @@
                To be honest the only type of music I don't listen to is country (sorry to everyone who loves country I just
                don't enjoy it). </p>
             </div>
+            <div class="well">
+              <h2><b>Graphics, Vision, and Robotics</b></h2>
+               <p style="line-height: 1.8;">If you have seen my projects page you can tell I have done a lot of graphics work. My 
+               sub tract at Umass is Graphics, Vision, and Robotics so I take classes specific towards those subjects. I would
+               say there are two major appeals to these fields of study for me. For one they give me a chance to diversify my study
+               so that I can learn about multiple disciplines. In addition, when I write a program for Graphics or Robotics I
+               actually see the results. What I mean by this is that instead of just seeing some lines of text appear I see an 
+               image I made appear or I see a robot move and do something spectacular because I programmed it to. An image Like the
+               one below is a lot cooler than some simple text on a screen</p>
+               
+               <br>
+            </div>
           </div>
               
         </body>
