--- a/Interests.html
+++ b/Interests.html
@@ -82,7 +82,7 @@
                one below is a lot cooler than some simple text on a screen</p>
                <br>
                <center>
-                <img src="images/teapots.jpg style="width:600px;height:600px;">
+                <img src="images/teapots.jpg" style="width:600px;height:600px;">
                </center>    
             </div>
           </div>
