--- a/java.html
+++ b/java.html
@@ -1,1 +1,68 @@
+<html lang="en">
+    <title>Something Clever</title>
+        <head>
+          <meta charset="utf-8">
+          <meta http-equiv="X-UA-Compatible" content="IE=edge">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
 
+          <!-- Bootstrap -->
+          <link href="css/bootstrap.min.css" rel="stylesheet">
+          <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+          <!-- Include all compiled plugins (below), or include individual files as needed -->
+          <script src="js/bootstrap.min.js"></script>
+
+        </head>
+        <body>
+            <div class="jumbotron" style="background-color:#99bbff;">
+              <h1 style="padding-left:30px;">Java Directory</h1>
+            </div>  
+             <div class="container"> 
+               <div class="btn-group btn-group-lg">
+                    <a href="index.html" class="btn btn-primary" role="button">Home</a>
+                    <div class="btn-group btn-group-lg">
+                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                      Programming Knowledge <span class="caret"></span></button>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="java.html">Java</a></li>
+                        <li><a href="C.html">C++/C</a></li>
+                        <li><a href="Python.html">Python</a></li>
+                        <li><a href="javascript.html">Javascript</a></li>
+                      </ul>
+                     </div> 
+                    <a href="Projects.html" class="btn btn-primary" role="button">Projects</a>
+                    <a href="Current_Work.html" class="btn btn-primary" role="button">Current Work</a>
+                  </div>
+             </div>
+          <div class="container">   
+            <div class="row">
+              <div class="col-sm-4">
+                <h2>Just Starting Out </h2>
+              </div>
+              <div class="col-sm-4">
+                <h2>Some Experiecne New To Java</h2>
+              </div>
+              <div class="col-sm-4">
+                <h2>Advanced Topics</h2>
+              </div>
+            </div>
+          </div>
+              
+        </body>
+        
+        <footer>
+         <div class="footer" style="background-color:#336699;">
+              <center>
+                <a href="https://www.linkedin.com/in/matthew-lydigsen-20b755b5" target="_blank">
+                    <img src="images/linkedinlogo.png" style="width:50px;height:50px;">
+                </a>
+                <a href="https://github.com/mattncc1701" target="_blank">
+                    <img src="images/githubicon.png" style="width:65px;height:60px; padding-left:5;">
+                </a>
+                <a href="https://www.imgur.com" target="_blank">
+                    <img src="images/imgurlogo.png" style="width:55px;height:50px;padding-left:8;">
+                </a>
+              </center>
+          </div>
+        </footer>  
+</html>
