--- a/java.html
+++ b/java.html
@@ -36,13 +36,13 @@
              </div>
           <div class="container">   
             <div class="row">
-              <div class="col-sm-4">
+              <div class="col-sm-4" "background-color:lavender;">
                 <h2>Just Starting Out </h2>
               </div>
-              <div class="col-sm-4">
-                <h2>Some Experiecne New To Java</h2>
+              <div class="col-sm-4" "background-color:lavender;">
+                <h2>Some Experience</h2>
               </div>
-              <div class="col-sm-4">
+              <div class="col-sm-4" "background-color:lavender;">
                 <h2>Advanced Topics</h2>
               </div>
             </div>
