--- a/java.html
+++ b/java.html
@@ -36,14 +36,20 @@
              </div>
           <div class="container">   
             <div class="row">
-              <div class="col-sm-4" style="background-color:lavender;">
-                <h2>Just Starting Out </h2>
+              <div class="col-sm-4" style="background-color:lavender; border-right: 1px">
+                <center>  
+                  <h2>Just Starting Out </h2>
+                </center>
+              </div>
+              <div class="col-sm-4" style="background-color:lavender; border-right: 1px">
+                <center>
+                  <h2>Some Experience</h2>
+                </center>
               </div>
               <div class="col-sm-4" style="background-color:lavender;">
-                <h2>Some Experience</h2>
-              </div>
-              <div class="col-sm-4" style="background-color:lavender;">
-                <h2>Advanced Topics</h2>
+                <center>
+                  <h2>Advanced Topics</h2>
+                </center>
               </div>
             </div>
           </div>
