--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               
              </div>-->
           <div class="container">   
-                 <div class="btn-group btn-group-lg">
+                 <div class="btn-group btn-group-lg btn-group-justified">
                        <div class="btn-group btn-group-lg">
                            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                               Programming Knowledge <span class="caret"></span></button>
