--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                  <div class="btn-group btn-group-lg btn-group-justified">
                        <div class="btn-group btn-group-lg">
                            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                              Programming Knowledge <span class="caret"></span></button>
+                              Programming <span class="caret"></span></button>
                               <ul class="dropdown-menu" role="menu">
                                 <li><a href="java.html">Java</a></li>
                                 <li><a href="C.html">C++/C</a></li>
