--- a/Projects.html
+++ b/Projects.html
@@ -18,7 +18,7 @@
               <h1 style="padding-left:30px;">Projects</h1>
             </div>  
              <div class="container"> 
-               <div class="btn-group btn-group-lg">
+               <div class="btn-group btn-group-lg btn-group-justified">
                     <a href="index.html" class="btn btn-primary" role="button">Home</a>
                     <div class="btn-group btn-group-lg">
                     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
