--- a/java.html
+++ b/java.html
@@ -36,12 +36,12 @@
              </div>
           <div class="container">   
             <div class="row">
-              <div class="col-sm-4" style="background-color:lavender; border-right: 1px">
+              <div class="col-sm-4" style="background-color:lavender; border-right: 1px solid #ccc;">
                 <center>  
                   <h2>Just Starting Out </h2>
                 </center>
               </div>
-              <div class="col-sm-4" style="background-color:lavender; border-right: 1px">
+              <div class="col-sm-4" style="background-color:lavender; border-right: 1px solid #ccc;">
                 <center>
                   <h2>Some Experience</h2>
                 </center>
