--- a/java.html
+++ b/java.html
@@ -19,19 +19,19 @@
             </div>  
              <div class="container"> 
                <div class="btn-group btn-group-lg btn-group-justified">
-                    <a href="matthewlydigsen.com" class="btn btn-primary" role="button">Home</a>
+                    <a href="https://www.matthewlydigsen.com" class="btn btn-primary" role="button">Home</a>
                     <div class="btn-group btn-group-lg">
                     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                       Programming Knowledge <span class="caret"></span></button>
                       <ul class="dropdown-menu" role="menu">
-                        <li><a href="matthewlydigsen.com/java.html">Java</a></li>
-                        <li><a href="matthewlydigsen.com/C.html">C++/C</a></li>
-                        <li><a href="matthewlydigsen.com/Python.html">Python</a></li>
-                        <li><a href="matthewlydigsen.com/javascript.html">Javascript</a></li>
+                        <li><a href="https://www.matthewlydigsen.com/java.html">Java</a></li>
+                        <li><a href="https://www.matthewlydigsen.com/C.html">C++/C</a></li>
+                        <li><a href="https://www.matthewlydigsen.com/Python.html">Python</a></li>
+                        <li><a href="https://www.matthewlydigsen.com/javascript.html">Javascript</a></li>
                       </ul>
                      </div> 
-                    <a href="matthewlydigsen.com/Projects.html" class="btn btn-primary" role="button">Projects</a>
-                    <a href="matthewlydigsen.com/Current_Work.html" class="btn btn-primary" role="button">Current Work</a>
+                    <a href="https://www.matthewlydigsen.com/Projects.html" class="btn btn-primary" role="button">Projects</a>
+                    <a href="https://www.matthewlydigsen.com/Current_Work.html" class="btn btn-primary" role="button">Current Work</a>
                   </div>
              </div>
           <div class="container">   
