--- a/java.html
+++ b/java.html
@@ -34,13 +34,18 @@
                     <a href="https://www.matthewlydigsen.com/Current_Work.html" class="btn btn-primary" role="button">Current Work</a>
                   </div>
              </div>
-          <div class="container">   
+          <div class="container" style="background-color:lavender;>   
             <div class="row">
               <div class="col-sm-4" style="background-color:lavender; border-right: 1px solid #ccc;">
                 <center>  
                   <h2>Just Starting Out </h2>
                 </center>
-                <a href="https://www.matthewlydigsen.com/Java_Tutorials/Overview.html">Overview</a>
+                <ul>
+                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Overview.html">Overview</a></li>
+                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/IDE.html">Picking an IDE</a></li>
+                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/OOP.html">Object Oriented Programming</a></li>
+                </ul>
+                
               </div>
               <div class="col-sm-4" style="background-color:lavender; border-right: 1px solid #ccc;">
                 <center>
