--- a/java.html
+++ b/java.html
@@ -16,8 +16,10 @@
         <body>
             <div class="jumbotron" style="background-color:#99bbff;">
               <h1 style="padding-left:30px;">Java Directory</h1>
-            </div>  
+            </div> 
+            
              <div class="container"> 
+             <img src="images/javalogo.jpg" style="width:500px;height:500px;">
                <div class="btn-group btn-group-lg btn-group-justified">
                     <a href="https://www.matthewlydigsen.com" class="btn btn-primary" role="button">Home</a>
                     <div class="btn-group btn-group-lg">
@@ -44,6 +46,7 @@
                   <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Overview.html">Overview</a></li>
                   <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/IDE.html">Picking an IDE</a></li>
                   <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/OOP.html">Object Oriented Programming</a></li>
+                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Download.html">Download Java</a></li>
                 </ul>
                 
               </div>
