--- a/java.html
+++ b/java.html
@@ -19,7 +19,9 @@
             </div> 
             
              <div class="container"> 
-             <img src="images/javalogo.jpg" style="width:500px;height:500px;">
+             <center>
+             <img src="images/javalogo.jpg" style="width:650px;height:500px;">
+             </center>
                <div class="btn-group btn-group-lg btn-group-justified">
                     <a href="https://www.matthewlydigsen.com" class="btn btn-primary" role="button">Home</a>
                     <div class="btn-group btn-group-lg">
