--- a/java.html
+++ b/java.html
@@ -56,6 +56,11 @@
                 <center>
                   <h2>Some Experience</h2>
                 </center>
+                <ul>
+                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Overview.html">Overview</a></li>
+                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/IDE.html">Picking an IDE</a></li>
+                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/OOP.html">Object Oriented Programming</a></li>
+                </ul>
               </div>
               <div class="col-sm-4" style="background-color:lavender;">
                 <center>
