--- a/java.html
+++ b/java.html
@@ -20,7 +20,7 @@
             
              <div class="container"> 
              <center>
-             <img src="images/javalogo.jpg" style="width:650px;height:500px;">
+             <img src="images/javalogo.jpg" style="width:650px;height:475px;">
              </center>
                <div class="btn-group btn-group-lg btn-group-justified">
                     <a href="https://www.matthewlydigsen.com" class="btn btn-primary" role="button">Home</a>
@@ -46,9 +46,11 @@
                 </center>
                 <ul>
                   <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Overview.html">Overview</a></li>
+                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Why_Java.html">Why Java</a></li
+                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Download.html">Download Java</a></li>
                   <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/IDE.html">Picking an IDE</a></li>
                   <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/OOP.html">Object Oriented Programming</a></li>
-                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Download.html">Download Java</a></li>
+                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Hello_World.html">Hello World</a></li>
                 </ul>
                 
               </div>
@@ -57,14 +59,21 @@
                   <h2>Some Experience</h2>
                 </center>
                 <ul>
-                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Overview.html">Overview</a></li>
-                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/IDE.html">Picking an IDE</a></li>
-                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/OOP.html">Object Oriented Programming</a></li>
+                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Classes_Methods.html">Classes and Methods</a></li>
+                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Loops_Conditionals.html">Loops and Conditionals</a></li>
+                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Libraries.html">Libraries</a></li>
+                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Visibility_Static.html">Visibility and Static</a></li>
+                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Enum.html">Enumerated Types</a></li>
                 </ul>
               </div>
               <div class="col-sm-4" style="background-color:lavender;">
                 <center>
                   <h2>Advanced Topics</h2>
+                  <ul>
+                    <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Inheritance.html">Inheritance</a></li>
+                    <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Design_Patterns.html">Design Patterns</a></li>
+                    <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Threads.html">Threads</a></li>
+                  </ul>
                 </center>
               </div>
             </div>
