--- a/Current_Work.html
+++ b/Current_Work.html
@@ -37,11 +37,28 @@
           <div class="container">   
             <div class="well">
               <h2><b>MatthewLydigsen.com</b></h2>
-               <p></p>
+               <p style="line-height: 1.8;"> Lately I have been working with this site you are looking on for multiple reasons. First off it has been a great
+               way to learn twitter bootstrap and explore all of the features it provides. I have gained much frontend experience
+               in terms of web development thanks to this project. This site isn't solely to show off myself but to also share my
+               knowledge of programming. There are plenty of tutorials for learning how to code but none that are quite as reachable
+               or comprehensive as I plan on making this wbe site. I hope that people will eventually look to my site for learning
+               about all sorts of new programming concepts that they may not have heard before. In addition to programming I hope
+               to eventually add a section to share my level of math knowledge. I took a course on Abstract Algebra and it was
+               one of the hardest math courses I have ever taken. Unfortuantely, the only reference I had was my book since there
+               were very few resources online. I hope to make a very in depth guide on the topic and make the subject more 
+               approachable. </p>
             </div>
             <div class="well">
               <h2><b>Molecular Playground Expansion</b></h2>
-               <p></p>
+               <p style="line-height: 1.8;">Recently I completed a class project called Molecular Playground Expansion which can be found 
+               <a href="https://github.com/Steve-Jones/Molecular-Playground">here</a>. You can visit the site www.teamdropout.com
+               to see the prototype of this project. This was project for my software engineering class that was aimed to teach
+               us about how to create software design documents for a large code base. At Umass there is a projector that displays
+               3D molecules that anyone can walk up to and rotate using a kinetic. This was called Molecular Playground and
+               there are installations like the one at Umass across the globe. I worked with a team of ten to design and implement
+               Molecular Playground Expansion which would be a web version of the old system that would centralize and update all
+               installations through this one web app. I personally worked on the database code for this website using postgresql
+               and nodejs to store all of the data in our system.</p>
             </div>
           </div>
               
