--- a/Current_Work.html
+++ b/Current_Work.html
@@ -58,7 +58,10 @@
                there are installations like the one at Umass across the globe. I worked with a team of ten to design and implement
                Molecular Playground Expansion which would be a web version of the old system that would centralize and update all
                installations through this one web app. I personally worked on the database code for this website using postgresql
-               and nodejs to store all of the data in our system.</p>
+               and nodejs to store all of the data in our system. This is our logo:</p>
+               <br>
+                <img src="images/dropoutlogo.jpg" style="width:200px;height:200px;">
+               <br>
             </div>
           </div>
               
