--- a/Current_Work.html
+++ b/Current_Work.html
@@ -60,7 +60,9 @@
                installations through this one web app. I personally worked on the database code for this website using postgresql
                and nodejs to store all of the data in our system. This is our logo:</p>
                <br>
-                <img src="images/dropoutlogo.jpg" style="width:200px;height:200px;">
+               <center>
+                <img src="images/dropoutlogo.jpg" style="width:400px;height:400px;">
+                </center>
                <br>
             </div>
           </div>
