--- a/Projects.html
+++ b/Projects.html
@@ -51,7 +51,10 @@
             </div>
             <div class="well">
               <h2><b>Space Invaders Game</b></h2>
-               <p style="line-height: 1.8;">Using java, I recreated the old arcade game space invaders.</p>
+               <p style="line-height: 1.8;">Using java, I recreated the old arcade game space invaders. In past summers I taught
+               a free java programming course using this program. Each week I would introduce new concepts about java and
+               let high school kids who were taking this class fill in the code to this game. By the end of the class
+               the students would have a firm knowledge of java and will have programmed much of the game Space Invaders.</p>
             </div>
             <div class="well">
               <h2><b>Plannit</b></h2>
