--- a/Interests.html
+++ b/Interests.html
@@ -39,8 +39,11 @@
             <div class="well">
               <h2><b>FIRST Robotics</b></h2>
               <center>  
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
-                frameborder="0" allowfullscreen ></iframe>
+              <!--width="560"-->
+              <div class="col-md-12">
+                <iframe class="col-sm-12"  height="315" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
+                 frameborder="0" allowfullscreen ></iframe>
+              <div class="col-md-12">     
               </center>
               <br>
                <p style="line-height: 1.8;">This video is of my FRC team back in 2013 at the Boston State Regional Finals. Our team
@@ -82,7 +85,7 @@
                one below is a lot cooler than some simple text on a screen</p>
                <br>
                <center>
-                <img src="images/teapots.jpg" style="width:600px;height:600px;">
+                <img src="images/teapots.jpg" class="img-responsive" style="width:600px;height:600px;">
                 <br><br>
                 <p> <font color="grey"> These teapots were rendered using a shader I made in Sunflow </font></p>
                </center>    
