--- a/Interests.html
+++ b/Interests.html
@@ -42,7 +42,7 @@
               <center>  
               <!--width="560"-->
               <div class="col-md-12">
-                <iframe class="col-sm-12" width="560" height="415" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
+                <iframe class="col-sm-12" height="415" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
                  frameborder="0" allowfullscreen ></iframe>
               <div class="col-md-12">     
               </center>
