--- a/java.html
+++ b/java.html
@@ -46,7 +46,7 @@
                 </center>
                 <ul>
                   <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Overview.html">Overview</a></li>
-                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Why_Java.html">Why Java</a></li
+                  <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Why_Java.html">Why Java</a></li>
                   <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/Download.html">Download Java</a></li>
                   <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/IDE.html">Picking an IDE</a></li>
                   <li><a href="https://www.matthewlydigsen.com/Java_Tutorials/OOP.html">Object Oriented Programming</a></li>
