--- a/Java_Tutorials/Overview.html
+++ b/Java_Tutorials/Overview.html
@@ -6,11 +6,11 @@
           <meta name="viewport" content="width=device-width, initial-scale=1">
 
           <!-- Bootstrap -->
-          <link href="css/bootstrap.min.css" rel="stylesheet">
+          <link href="../css/bootstrap.min.css" rel="stylesheet">
           <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
           <!-- Include all compiled plugins (below), or include individual files as needed -->
-          <script src="js/bootstrap.min.js"></script>
+          <script src="../js/bootstrap.min.js"></script>
 
         </head>
         <body>
@@ -37,19 +37,4 @@
               
         </body>
         
-        <footer>
-         <div class="footer" style="background-color:#336699;">
-              <center>
-                <a href="https://www.linkedin.com/in/matthew-lydigsen-20b755b5" target="_blank">
-                    <img src="images/linkedinlogo.png" style="width:50px;height:50px;">
-                </a>
-                <a href="https://github.com/mattncc1701" target="_blank">
-                    <img src="images/githubicon.png" style="width:65px;height:60px; padding-left:5;">
-                </a>
-                <a href="https://www.imgur.com" target="_blank">
-                    <img src="images/imgurlogo.png" style="width:55px;height:50px;padding-left:8;">
-                </a>
-              </center>
-          </div>
-        </footer>  
 </html>
