--- a/Java_Tutorials/Overview.html
+++ b/Java_Tutorials/Overview.html
@@ -33,10 +33,23 @@
                     <p style="line-height: 1.8;">
                         The first thing you may be asking yourself is what a programming language is. Well Every computer consists of two
                         parts the hardware and software. The hardware is everything sitting in front of you. The software is the reason
-                        why your computer lights up.
+                        why your computer lights up. There are tons of programming languages out there and they all have different 
+                        syntax or ways of writing down the code. The newer languages like Java and C++ share many similar traits so
+                        once you learn many of the topics in this section, you'll be able to learn most other languages very quickly.
+                        The main challenge is simply learning the new syntax.
                     </p>
+                    
+                     <p style="line-height: 1.8;">
+                       The rest of the getting started section is just getting java set up on your machine, learning about the IDE eclipse,
+                       and writing your first program. If you are already past all of this feel free to move to the next section.
+                    </p>     
                 </div>
-            </div>    
+            </div>
+            <div class="container"> 
+               <div class="btn-group btn-group-lg btn-group-justified">
+                    <a href="https://www.matthewlydigsen.com/Java_Tutorials/Why_Java.html" class="btn btn-primary" role="button">Next</a>
+                  </div>
+             </div>
         </body>
         
 </html>
