--- a/Java_Tutorials/Overview.html
+++ b/Java_Tutorials/Overview.html
@@ -46,10 +46,12 @@
                 </div>
             </div>
             <div class="container"> 
-               <div class="btn-group btn-group-lg btn-group-justified">
+               <center>
+               <div class="btn-group btn-group-lg">
                     <a href="https://www.matthewlydigsen.com/Java_Tutorials/Why_Java.html" class="btn btn-primary" role="button">Next</a>
-                  </div>
-             </div>
+               </div>
+               </center>
+            </div>
         </body>
         
 </html>
