--- a/Java_Tutorials/Overview.html
+++ b/Java_Tutorials/Overview.html
@@ -43,9 +43,9 @@
                        The rest of the getting started section is just getting java set up on your machine, learning about the IDE eclipse,
                        and writing your first program. If you are already past all of this feel free to move to the next section.
                     </p>
-                    <div class="btn-group btn-group-lg">
-                      <a href="https://www.matthewlydigsen.com/Java_Tutorials/Why_Java.html" class="btn btn-primary" role="button">Next</a>
-                    </div>
+                </div>
+                <div class="btn-group">
+                  <a href="https://www.matthewlydigsen.com/Java_Tutorials/Why_Java.html" class="btn btn-primary" role="button">Next</a>
                 </div>
             </div>
         </body>
